# tasklings

./: .env.example  .gitignore  README.md  pyproject.toml  run.py  smoke_phase3.py  smoke_phase4.py  smoke_phase56.py  smoke_phase78.py
app/: __init__.py  config.py
app/middleware/: auth.py  validation.py
app/models/: auth.py  chores.py  db.py  group_quests.py  household.py  members.py  purchases.py  quests.py  rotation.py  store.py  transactions.py
app/routes/api/: admin.py  assignments.py  auth.py  chores.py  group_quests.py  members.py  quests.py  store.py  sync.py  tokens.py  transactions.py
app/routes/views/: admin.py  auth.py  index.py  profile.py  quests.py  runlist.py  store.py
app/services/: assignment_engine.py  auth.py  currency.py  group_quests.py  quests.py  store.py
app/static/: manifest.json  sw.js
app/static/css/: main.css
app/static/js/: app.js  offline-queue.js  sw-register.js
app/templates/: base.html  index.html
app/templates/admin/: activity.html  base.html  chore_form.html  chores.html  dashboard.html  member_form.html  members.html  quest_form.html  quests.html  store.html  store_form.html  tokens.html
app/templates/auth/: login.html  reset_confirm.html  reset_request.html
app/templates/components/: _avatar.html  _lumin_display.html  _modal.html  _nav.html
migrations/: 001_initial_schema.sql  002_seed_data.sql  003_chore_assignees.sql
scripts/: reset_admin.py  serve.py
tests/: conftest.py  test_auth.py  test_chores.py  test_currency.py  test_group_quests.py  test_quests.py  test_runlist.py  test_store.py
(+18 files in other folders)
