[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tasklings"
version = "0.1.0"
description = "Tasklings -- Family Chore Management PWA"
requires-python = ">=3.11"
dependencies = [
    "quart>=0.19",
    "aiosqlite>=0.20",
    "bcrypt>=4.1",
    "python-dotenv>=1.0",
    "itsdangerous>=2.1",
]

[project.scripts]
reset-admin = "scripts.reset_admin:main"
serve = "scripts.serve:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
